--- a/app/src/tpl.html
+++ b/app/src/tpl.html
@@ -8,6 +8,31 @@
         </title>
     </head>
     <body>
+        <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+        <script>
+            var Module = {
+                canvas: (function() {
+
+                  var canvas = document.getElementById('canvas');
+
+                  // As a default initial behavior, pop up an alert when webgl context is lost. To make your
+                  // application robust, you may want to override this behavior before shipping!
+                  // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
+
+                  canvas.addEventListener(
+                      "webglcontextlost",
+                      function(e) {
+                          alert('WebGL context lost. You will need to reload the page.');
+                          e.preventDefault();
+                      },
+                      false
+                  );
+
+                  return canvas;
+                })()
+            }
+        </script>
+
         {{{ SCRIPT }}}
     </body>
 </html>
